k8s/api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: nolights
spec:
  selector:
    app: api
  ports:
    - port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: nolights
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: api
          image: ghcr.io/redonti/no-lights-monitor/api:sha-f2e921a7d22b75dd21a8ec61852a3c954033b8b0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
            - containerPort: 8081
              name: metrics
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 30
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
