k8s/outage.yaml
apiVersion: v1
kind: Service
metadata:
  name: outage
  namespace: nolights
spec:
  selector:
    app: outage
  ports:
    - port: 8090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: outage
  namespace: nolights
spec:
  replicas: 1
  selector:
    matchLabels:
      app: outage
  template:
    metadata:
      labels:
        app: outage
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: outage
          image: ghcr.io/redonti/no-lights-monitor/outage:sha-e78d22e6c0b015319fc33c8f2776b3f276a6186f
          imagePullPolicy: Always
          ports:
            - containerPort: 8090
